--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -97,13 +97,13 @@ button:hover {
 }
 
 .boton-ver {
-  background-color: #f2f618;
+  background-color: yellow;
   color: #000;
   padding: 8px 16px;
   font-weight: bold;
   border: none;
   border-radius: 8px;
-  box-shadow: 0 0 6px #f3f646;
+  box-shadow: 0 0 12px #ccff00, 0 0 24px #ccff00;
   transition: transform 0.2s, box-shadow 0.2s;
   margin-right: 8px;
 }
